# sundials-manyvector-demo

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  Makefile.in  Makefile.opts  README.md  README.tex.md  ToDo.md  ToDo.txt  ark_euler3D.cpp  cleanup.sh  compile_test.cpp  euler3D.cpp  euler3D.hpp  init_from_file.c  init_from_file.cpp  input_euler3D.txt  linear_advection.cpp  plot_euler3D.py  solve_params.txt  utilities_euler3D.py
cmake/: FindSUNDIALS.cmake  (+1 more)
src/: CMakeLists.txt  communication_test.cpp  communication_test_main.cpp  compile_test.cpp  context_test.cpp  dengo_primordial_network.cpp  dengo_primordial_network.hpp  double_mach_reflection.cpp  euler3D.cpp  euler3D.hpp  euler3D_main.cpp  explosion.cpp  fluid_blast.cpp  gopt.cpp  hurricane.cpp  imex_chem_hydro_main.cpp  io.cpp  io_test.cpp  io_test_main.cpp  linear_advection.cpp  magma_scaling_main.cpp  multirate_chem_hydro_main.cpp  primordial_blast.cpp  primordial_forced.cpp  primordial_ode.cpp  primordial_ode_main.cpp  primordial_static.cpp  profiler.hpp  raja_primordial_network.cpp  raja_primordial_network.hpp  rayleigh_taylor.cpp  sod.cpp  sunmemory_mirror.hpp  utilities.cpp
tests/: CMakeLists.txt
tests/fluid_blast/: input_fluid_blast.txt  plot_fluid_blast.py  utilities_euler3D.py
tests/hurricane_xy/: input_hurricane.txt  input_hurricane_xy.txt  plot_hurricane_xy.py
tests/hurricane_yz/: input_hurricane.txt  input_hurricane_yz.txt  plot_hurricane_yz.py
tests/hurricane_zx/: input_hurricane.txt  input_hurricane_zx.txt  plot_hurricane_zx.py
tests/hurricane_zx_color/: input_hurricane.txt  plot_hurricane_zx.py  plot_hurricane_zx_color.py
tests/linear_advection_x/: CMakeLists.txt  input_la_x.txt  input_linear_advection.txt  plot_linear_advection_x.py
tests/linear_advection_y/: input_la_y.txt  input_linear_advection.txt  plot_linear_advection_y.py
tests/linear_advection_z/: input_la_z.txt  input_linear_advection.txt  plot_linear_advection_z.py
tests/magma_scaling/: jobscript_summit.lsf  setup_tests.sh
tests/primordial_blast/: README.md  cleanup.sh  input_primordial_blast.txt  input_primordial_blast_imex.txt  input_primordial_blast_mr.txt  input_primordial_blast_mr_gpu.txt  input_summit.txt  input_test_imex.txt  input_test_mr.txt  jobscript_lassen.lsf  jobscript_summit.lsf  setup_tests.sh
tests/primordial_blast/imex_scaling/n1024/: input_primordial_blast_imex.txt  jobscript.lsf
tests/primordial_blast/imex_scaling/n128/: input_primordial_blast_imex.txt  jobscript.lsf
tests/primordial_blast/imex_scaling/n16/: input_primordial_blast_imex.txt  jobscript.lsf
tests/primordial_blast/imex_scaling/n2/: input_primordial_blast_imex.txt  jobscript.lsf
tests/primordial_blast/imex_scaling/n2000/: input_primordial_blast_imex.txt  jobscript.lsf
tests/primordial_blast/imex_scaling/n2048/: input_primordial_blast_imex.txt  jobscript_summit.lsf
tests/primordial_blast/imex_scaling/n256/: input_primordial_blast_imex.txt  jobscript_summit.lsf
tests/primordial_blast/imex_scaling/n32/: input_primordial_blast_imex.txt  jobscript_summit.lsf
tests/primordial_blast/imex_scaling/n3456/: input_primordial_blast_imex.txt  jobscript.lsf
tests/primordial_blast/imex_scaling/n4/: input_primordial_blast_imex.txt  jobscript_summit.lsf
tests/primordial_blast/imex_scaling/n4000/: input_primordial_blast_imex.txt  jobscript_summit.lsf
tests/primordial_blast/imex_scaling/n432/: input_primordial_blast_imex.txt  jobscript.lsf
tests/primordial_blast/imex_scaling/n864/: input_primordial_blast_imex.txt  jobscript_summit.lsf
tests/primordial_blast/lassen_results_imex_v_mri/: plot_driver.sh
tests/primordial_blast/lassen_results_imex_v_mri/imex/: stdout-719209.txt  stdout-719210.txt  stdout-719211.txt  stdout-719212.txt
tests/primordial_blast/lassen_results_imex_v_mri/mri/: stderr-719205.txt  stdout-719204.txt  stdout-719205.txt  stdout-719206.txt  stdout-719207.txt
tests/primordial_blast/mr_scaling/n1024/: input_primordial_blast_mr.txt  jobscript.lsf
tests/primordial_blast/mr_scaling/n128/: input_primordial_blast_mr.txt  jobscript.lsf
tests/primordial_blast/mr_scaling/n16/: input_primordial_blast_mr.txt  jobscript.lsf
tests/primordial_blast/mr_scaling/n2/: input_primordial_blast_mr.txt  jobscript.lsf
tests/primordial_blast/mr_scaling/n2000/: input_primordial_blast_mr.txt  jobscript.lsf
tests/primordial_blast/mr_scaling/n2048/: input_primordial_blast_mr.txt  jobscript_summit.lsf
tests/primordial_blast/mr_scaling/n256/: input_primordial_blast_mr.txt  jobscript_summit.lsf  primordial_tables.h5
tests/primordial_blast/mr_scaling/n32/: input_primordial_blast_mr.txt  jobscript_summit.lsf
tests/primordial_blast/mr_scaling/n3456/: input_primordial_blast_mr.txt  jobscript.lsf
tests/primordial_blast/mr_scaling/n4/: input_primordial_blast_mr.txt  jobscript_summit.lsf
tests/primordial_blast/mr_scaling/n4000/: input_primordial_blast_mr.txt  jobscript_summit.lsf
tests/primordial_blast/mr_scaling/n432/: input_primordial_blast_mr.txt  jobscript.lsf
tests/primordial_blast/mr_scaling/n864/: input_primordial_blast_mr.txt  jobscript_summit.lsf
tests/primordial_blast/summit_results_1/: stderr-646786.txt  stderr-646787.txt  stderr-646788.txt  stderr-646789.txt  stderr-646790.txt  stderr-646791.txt  stderr-646792.txt  stderr-646793.txt  stderr-646795.txt  stderr-646796.txt  stderr-646798.txt  stderr-646829.txt  stdout-646786.txt  stdout-646787.txt  stdout-646788.txt  stdout-646789.txt  stdout-646790.txt  stdout-646791.txt  stdout-646792.txt  stdout-646793.txt  stdout-646795.txt  stdout-646796.txt  stdout-646797.txt  stdout-646798.txt  stdout-646799.txt  stdout-646829.txt
tests/primordial_forced/: input_primordial_forced.txt
tests/primordial_ode/: final__tables.h5  input_primordial_ode.txt
tests/primordial_static/: input_primordial_static.txt
tests/rayleigh_taylor/: input_rayleigh_taylor.txt  plot_rayleigh_taylor.py
tests/sod_x/: input_sod.txt  input_sod_x.txt  plot_sod_x.py
tests/sod_y/: input_sod.txt  input_sod_y.txt  plot_sod_y.py
tests/sod_z/: input_sod.txt  input_sod_z.txt  plot_sod_z.py
(+31 files in other folders)
